[gd_scene load_steps=7 format=3 uid="uid://cnidevfjqc057"]

[ext_resource type="Theme" uid="uid://cvocwk6x1wj7h" path="res://config/themes/global.tres" id="1_5ryd0"]
[ext_resource type="Script" uid="uid://cdjf6uditcj46" path="res://scripts/components/ui/add_item_selector/add_item_selector.gd" id="2_eyspu"]
[ext_resource type="FontFile" uid="uid://xme5aeq8q7r7" path="res://resources/fonts/caskaydia/CaskaydiaCoveNerdFont-Bold.ttf" id="2_s26o8"]
[ext_resource type="Script" uid="uid://c74uhqwujehas" path="res://scripts/modules/button/general_button.gd" id="4_p64km"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s26o8"]
bg_color = Color(0, 0, 0, 0.5882353)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eyspu"]
bg_color = Color(0.101960786, 0.101960786, 0.101960786, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="AddItemSelector" type="PanelContainer"]
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5ryd0")
theme_override_styles/panel = SubResource("StyleBoxFlat_s26o8")
script = ExtResource("2_eyspu")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_eyspu")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
custom_minimum_size = Vector2(360, 360)
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="AddFilesButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_s26o8")
text = "  Tambahkan File"
script = ExtResource("4_p64km")

[node name="AddFilesLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.39215687)
theme_override_font_sizes/font_size = 14
text = "Dapat berupa gambar (PNG, JPG),
maupun sekumpulan teks (TXT)."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Separator" type="Control" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="AddTextButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_s26o8")
text = "󰦨  Tulis Teks"
script = ExtResource("4_p64km")

[node name="AddTextLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.39215687)
theme_override_font_sizes/font_size = 14
text = "Menambahkan teks secara manual."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Separator2" type="Control" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="BackButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(136, 42)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_fonts/font = ExtResource("2_s26o8")
text = "Kembali"
script = ExtResource("4_p64km")
